# vidshotter

./: Cargo.toml  README.md
.github/workflows/: aur-upload.yml  ci.yml  release.yml
src/: main.rs
