[package]
name = "vidshotter"
version = "1.0.1"
edition = "2021"
authors = ["MLM Games"]
description = "Extract equally-spaced screenshots from videos or GIFs"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
indicatif = { version = "0.18", features = ["rayon"] }
rayon = "1.8"
tempfile = "3.8"
colored = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
